doing some progress with the css homework. My nose hurts. Damn allergies

--- a/FT-M2-master/02-CSS/homework/responsive-web/less/home-page.less
+++ b/FT-M2-master/02-CSS/homework/responsive-web/less/home-page.less
@@ -1,5 +1,6 @@
 // Conteindo del Home
 
+
 .home {
 
   .intro {
@@ -10,6 +11,10 @@
 
     p {
       padding:0 15px;
+    }
+
+    img {
+      border-radius: 8px;
     }
 
   }
@@ -58,6 +63,7 @@
       }
 
       .btn {
+        .mixinData();
       }
     }
 
