--- a/FT-M2-master/02-CSS/homework/responsive-web/less/mixins.less
+++ b/FT-M2-master/02-CSS/homework/responsive-web/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins acá
+.mixinData{
+    background-color:@btn-bg-color;
+    font-size: 2rem;
+    max-width: 12rem;
+    color: @porcelain;
+    cursor: pointer;
+}
+
+.mixinData2{
+    border-radius: 8px;
+}
