--- a/FT-M2-master/02-CSS/homework/responsive-web/less/navigation.less
+++ b/FT-M2-master/02-CSS/homework/responsive-web/less/navigation.less
@@ -1,1 +1,28 @@
 // Código de Nav acá
+.Navbar{
+    display:flex;
+    font-size: 2rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+div{
+padding: 1rem;
+margin-top: 1rem;
+}
+
+.mainSpan{ 
+    
+    h1{
+        font-size: 3rem;
+        margin:0.7rem;
+        padding-top: 00.7rem;
+    }
+    display:flex;
+    flex-direction: column;
+    font-size: 1rem;
+    background-color: rgb(206, 206, 206);
+    align-items: center;
+  
+  }
