New Changes added. Trying to do the mobile design part

--- a/FT-M2-master/02-CSS/homework/responsive-web/css/index.css
+++ b/FT-M2-master/02-CSS/homework/responsive-web/css/index.css
@@ -4,6 +4,12 @@
   max-width: 12rem;
   color: #F6F7F8;
   cursor: pointer;
+  border-radius: 0.5em;
+}
+@media screen and (max-width: 600px) {
+  .mixinData {
+    max-width: 40rem;
+  }
 }
 .mixinData2 {
   border-radius: 8px;
@@ -193,6 +199,18 @@ div {
   margin: 0.7rem;
   padding-top: 0.7rem;
 }
+@media screen and (max-width: 600px) {
+  .Navbar {
+    display: flex;
+    font-size: 1.7rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .mainSpan {
+    max-width: 54rem;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -202,6 +220,19 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 992px) {
+  footer {
+    color: #22283B;
+    background: #f4f4f4;
+    padding: 20px 0;
+    border: 1px double #e0e0e0;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 50rem;
+  }
 }
 .home .intro h2 {
   padding: 15px;
@@ -254,6 +285,12 @@ footer {
   max-width: 12rem;
   color: #F6F7F8;
   cursor: pointer;
+  border-radius: 0.5em;
+}
+@media screen and (max-width: 600px) {
+  .home .actual .actual-text .btn {
+    max-width: 40rem;
+  }
 }
 .home .actual .actual-img {
   width: 46%;
@@ -263,4 +300,36 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media screen and (max-width: 600px) {
+  .home .actual .actual-text .intro img {
+    max-width: 50rem;
+    border-radius: 8px;
+  }
+  .home .actual .actual-text .intro p {
+    padding: 0 15px;
+    max-width: 50rem;
+  }
+  .home .actual .actual-text .intro .music-images {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .home .actual .actual-text .intro .music-images img {
+    width: 28%;
+    margin: 20px 2.5%;
+    border-radius: 0px;
+    height: 150%;
+  }
+  .home .tecnologia {
+    display: none;
+  }
+  .home .ondas {
+    display: none;
+  }
+  .home .auricular {
+    flex-wrap: nowrap;
+    display: block;
+    color: aqua;
+  }
 }
