--- a/FT-M2-master/02-CSS/homework/responsive-web/less/mixins.less
+++ b/FT-M2-master/02-CSS/homework/responsive-web/less/mixins.less
@@ -5,6 +5,10 @@
     max-width: 12rem;
     color: @porcelain;
     cursor: pointer;
+    border-radius: 0.5em;
+    @media screen and (max-width: 600px) {
+        max-width: 40rem;
+    }
 }
 
 .mixinData2{
