--- a/FT-M2-master/02-CSS/homework/responsive-web/less/footer.less
+++ b/FT-M2-master/02-CSS/homework/responsive-web/less/footer.less
@@ -9,3 +9,17 @@ footer {
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width: 992px) {
+  footer {
+  color: #22283B;
+  background: #f4f4f4;
+  padding: 20px 0;
+  border: 1px double #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 50rem;
+  }
+}
