--- a/FT-M2-master/02-CSS/homework/responsive-web/less/navigation.less
+++ b/FT-M2-master/02-CSS/homework/responsive-web/less/navigation.less
@@ -24,5 +24,18 @@ margin-top: 1rem;
     font-size: 1rem;
     background-color: rgb(206, 206, 206);
     align-items: center;
-  
+}
+
+@media screen and (max-width: 600px) {
+    .Navbar{
+        display:flex;
+        font-size: 1.7rem;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .mainSpan{
+        max-width: 54rem;
+    }
   }
